# ProcessingNodes

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
examples/: example01.py
processingnodes/: DataProcessor.py  ProcessingNode.py  ProcessingPipeline.py  __init__.py
processingnodes/nodes/: BufferNode.py  BurgSpectrumNode.py  ChannelSelectorNode.py  IIRFilterNode.py  LSLStreamNode.py  ReductionNode.py  SinglePoleFilterNode.py  SpatialFilterNode.py  __init__.py
processingnodes/util/: burg_spectral_estimation.py
tests/: test_DataProcessor.py
tests/nodes/: test_BufferNode.py  test_BurgSpectrumNode.py  test_LSLStreamNode.py  test_ReductionNode.py
